--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "embla-carousel-react": "^8.1.5",
     "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.412.0",
-    "next": "^14.2.4",
+    "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
